fix: letter spacing in footer

--- a/_croucher/_footer.sass
+++ b/_croucher/_footer.sass
@@ -57,6 +57,7 @@
         align-items: center
         width: fit-content
         flex-direction: row
+        letter-spacing: 0.01em !important
         &.for-small
           flex-direction: column
           width: 100%
@@ -104,6 +105,7 @@
         align-items: center
         button
           padding: 0
+          letter-spacing: 0.01em
           font-size: 16px
           border: none
           background: transparent
